Expand Dart Sass compatibility for selectors, calculations, colors, media queries, and diagnostics
Assisted-by: grok-build:grok-4.5